--- a/index.css
+++ b/index.css
@@ -69,6 +69,8 @@ button{
     #set h1{
         padding: 9px;
     }
-    
+    #chartDiv{
+        width:100%; height:300px; margin:20px 0px;
+    }
 }
 
