--- a/index.css
+++ b/index.css
@@ -74,6 +74,12 @@ button{
     margin-top: 100px;
 }
 
+footer{
+    text-align: center;
+    font-family: 'Nunito', sans-serif ;
+    margin-top: 100px;
+}
+
 @media screen and (max-width : 800px) {
     .title{
         font-size: 2.4rem;
@@ -87,7 +93,7 @@ button{
         margin-left: 20px;
         margin-right: -4px;
         font-family: 'Spline Sans', sans-serif;
-        font-size: 10px;
+        font-size: 11px;
     }
     #set h1{
         padding: 9px;
